// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePage tests should display the error banner on parse error 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  empty={Object {}}
  title="Add Suppressions"
>
  <ErrorBanner
    parseError={true}
    persistError={false}
  />
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Single Recipient",
          "onClick": [Function],
        },
        Object {
          "content": "Bulk Upload",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <withRouter(Connect(ReduxForm)) />
  </Panel>
</Page>
`;

exports[`CreatePage tests should display the error banner on persist error 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  empty={Object {}}
  title="Add Suppressions"
>
  <ErrorBanner
    parseError={false}
    persistError={true}
  />
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Single Recipient",
          "onClick": [Function],
        },
        Object {
          "content": "Bulk Upload",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <withRouter(Connect(ReduxForm)) />
  </Panel>
</Page>
`;

exports[`CreatePage tests should render AddTab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  empty={Object {}}
  title="Add Suppressions"
>
  <Tabs
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Single Recipient",
          "onClick": [Function],
        },
        Object {
          "content": "Bulk Upload",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <withRouter(Connect(ReduxForm)) />
  </Panel>
</Page>
`;

exports[`CreatePage tests should render UploadTab 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Suppressions",
      "to": "/lists/suppressions",
    }
  }
  empty={Object {}}
  title="Add Suppressions"
>
  <Tabs
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "content": "Single Recipient",
          "onClick": [Function],
        },
        Object {
          "content": "Bulk Upload",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <withRouter(Connect(ReduxForm)) />
  </Panel>
</Page>
`;
